# willard

./: .gitignore  LICENSE  README.md  pytest.ini  requirements.txt  setup.cfg  setup.py
jupyter/: coprime-periodicity.ipynb  phase_kickback.ipynb  test_plot_teleport.ipynb
tests/: test_gate.py  test_gate_builder.py  test_qreg.py  test_qubit.py  test_qucrumb.py
tests/alg/: test_arith.py  test_communication.py  test_crypto.py  test_deutsch.py  test_network.py  test_search.py  test_spy_detector.py  test_swap_test.py  test_teleportation.py
tests/classical/: test_rsa.py
tests/const/: test_gate_builder.py
tests/encode/: test_encode.py
tests/type/: test_oracle.py  test_qbit.py  test_qbits.py  test_qbits_alg.py  test_qbits_gates.py  test_qreg.py  test_qreg_alg.py  test_qreg_operation.py  test_qreg_single_qbit_op.py  test_qreg_util.py  test_qubit.py  test_qucrumb.py  test_simon.py  test_uint.py
tests/type/legacy/: legacy_test_qubit.py  legacy_test_qucrumb.py
tests/util/: test_rsa.py  test_slice.py
willard/: __init__.py  type.py
willard/alg/: __init__.py  deutsch.py  search.py  simon.py  spy.py  spy_detector.py  swap_test.py  teleport.py
willard/classical/: rsa.py
willard/const/: __init__.py  dirac.py  gate.py  gate_builder.py  state.py
willard/network/: __init__.py  superdense.py
willard/plot/: __init__.py  plot.py  qplot.py
willard/type/: __init__.py  qbit.py  qbits.py  qindex.py  qindex.py.ab28b83bc8e214675b50731faacbce54.tmp  qint.py  qreg.py  qselected.py  qtype.py  qubit.py  qucrumb.py  quint.py
willard/util/: __init__.py  rsa.py  slice.py
(+9 files in other folders)
