[metadata]
name = {name}
version = file: {name}/_version.txt
author = Gun Yoon 
author-email = cfr2ak@gmail.com
home-page = https://github.com/althonos/{name}
description = {description}
long-description = file: README.md
long_description_content_type = text/markdown
license = MIT
license-file = COPYING
platform = any
keywords = {keywords}